test/Fail/PropCumulative.err
PropCumulative.agda:32,20-22: error: [UnequalTerms]
⊤ !=< (True _)
when checking that the expression tt has type X _
